--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     background-color: #FFDEE9;
     background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
     background-size: cover;
+    background-repeat: no-repeat;
     height: 100vh;
 }
 
@@ -15,6 +16,10 @@ label {
     display: inline;
     margin: 5px 10px;
     vertical-align: middle;
+}
+
+h1 {
+    margin: 15px 10px;
 }
 
 button {
@@ -31,20 +36,33 @@ button:hover {
     background-color: cornflowerblue;
 }
 
-input[type=text] {
+textarea {
     display: block;
-    width: 90%;
-    height: 30px;
-    margin: 10px;
+    width: 96%;
     align-items: center;
+    border-radius: 5px;
 }
 
 input[type=checkbox]{
-    /*accent-color:  #C70039;  */
     width: 25px;
     height: 25px;
     display: inline;
     vertical-align: middle;
+}
+
+footer {
+    margin: 30px;
+    padding: 10px;
+    font-size: 13px;
+}
+footer p {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+a {
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .pomodoro {
@@ -55,7 +73,7 @@ input[type=checkbox]{
 }
   
 .container {
-    margin-top: 30px;
+    padding: 15px;
     justify-content: center;
     width: 50%;
     margin: 0 1vw;
@@ -79,8 +97,15 @@ input[type=checkbox]{
     margin-left: auto;
     margin-right: auto;
     background-color: aquamarine;
-    border-radius: 50%;
+    border-radius: 50%;   
 }
+
+.circle h1 {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
 #display {
     font-size: 2.5em;
     padding-top: auto;
@@ -102,6 +127,18 @@ input[type=checkbox]{
 
 .tasks {
     text-align: left;
+}
+
+@media (max-width: 671px) {
+    .pomodoro {
+        display: block;
+    }
+
+    .container {
+        width: 100%;
+        height: fit-content;
+    }
+
 }
 
 
