--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #FFDEE9;
-    background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
+    background: #6441A5;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2a0845, #6441A5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    /*height: 100vh;*/
 }
 
 label {
@@ -51,6 +53,7 @@ footer {
     margin: 30px;
     padding: 10px;
     font-size: 13px;
+    color: white;
 }
 footer p {
     margin-top: 5px;
@@ -60,6 +63,7 @@ footer p {
 a {
     margin-left: 5px;
     margin-right: 5px;
+    color: white;
 }
 
 .pomodoro {
